Modify index.html to provide better experience while app loads

--- a/client/index.html
+++ b/client/index.html
@@ -12,14 +12,17 @@
     <title>Hello Books</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+
     <div id="root">
-        <div style="padding-top: 35vh;">
-            <h2 style="color: #011b33; font-weight: bold; text-align: center">
+        <div style="padding-top: 35vh; text-align: center; color: #011b33;">
+            <h2 style="font-weight: bold;">
                 Welcome To Hello Books
             </h2>
+            <noscript>
+              <h5 style="font-weight: bold;">
+                  You need to enable JavaScript to run this app.
+              </h5>
+            </noscript>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
