Request material icons over https

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#011b33">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="/favicon.ico">
     <title>Hello Books</title>
   </head>
