--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-    <script src="/bundle.js"></script>
+    <!-- <script src="/bundle.js"></script> -->
   </body>
 </html>
