feature(pagination): add client-side pagination for books

--- a/client/index.html
+++ b/client/index.html
@@ -17,9 +17,9 @@
         text-align: center;
         font-size: 70px;
         font-weight: bold;
-        -webkit-animation: beat 1s ease-in infinite;
-        -moz-animation: beat 1s ease-in infinite;
-        animation: beat 1s ease-in infinite;
+        -webkit-animation: beat 1s ease-in-out infinite;
+        -moz-animation: beat 1s ease-in-out infinite;
+        animation: beat 1s ease-in-out infinite;
         animation-direction: alternate;
       }
       @-webkit-keyframes beat {
